<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <ImageView
            android:id="@+id/img_sitio"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@android:drawable/ic_menu_camera"/>

        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/img_sitio"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/img_sitio"
            android:hint="@string/nombre" />

        <EditText
            android:id="@+id/txt_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_sitio"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/img_sitio"
            android:hint="@string/ubicacion" />
        <View
            android:id="@+id/lin_lineaSuperior"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/img_sitio"
            android:layout_marginTop="8dp"
            android:background="@color/verde"
            />

        <TextView
            android:id="@+id/txt_informacion_tnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin_lineaSuperior"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/informacion"
            android:textColor="@color/purple_500"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/txt_inform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_informacion_tnt"
            android:hint="@string/informacion"
            android:textSize="16dp" />

        <View
            android:id="@+id/lin_lineaInferior"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/txt_inform"
            android:layout_marginTop="8dp"
            android:background="@color/verde" />

        <TextView
            android:id="@+id/txt_valoracion_tit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin_lineaInferior"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/valoracion"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />
        <RatingBar
            android:id="@+id/rtb_valoracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_valoracion_tit"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:progressTint="@color/amarillo"
            />
        <Button
            android:id="@+id/btn_Guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            />



    </RelativeLayout>
</layout>